--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "postcss": "^8.4.31",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.6",
+    "shopify-cli": "^1.0.11",
     "tailwindcss": "^3.3.5",
     "vite": "^4.5.0",
     "vite-plugin-shopify": "^2.2.1"
